[gd_scene load_steps=22 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Font/Mono.tres" type="DynamicFont" id=2]
[ext_resource path="res://Font/MonoBigger.tres" type="DynamicFont" id=3]
[ext_resource path="res://Player/Inventory.gd" type="Script" id=4]
[ext_resource path="res://Button/W_Pressed.png" type="Texture" id=5]
[ext_resource path="res://Button/W.png" type="Texture" id=6]
[ext_resource path="res://Button/D_Pressed.png" type="Texture" id=7]
[ext_resource path="res://Button/A.png" type="Texture" id=8]
[ext_resource path="res://Button/D.png" type="Texture" id=9]
[ext_resource path="res://Button/S.png" type="Texture" id=10]
[ext_resource path="res://Button/A_Pressed.png" type="Texture" id=11]
[ext_resource path="res://Button/S_Pressed.png" type="Texture" id=12]
[ext_resource path="res://Button/E.png" type="Texture" id=13]
[ext_resource path="res://Button/E_Pressed.png" type="Texture" id=14]
[ext_resource path="res://Button/MouseLeft_Pressed.png" type="Texture" id=15]
[ext_resource path="res://Button/MouseLeft.png" type="Texture" id=16]
[ext_resource path="res://Button/MouseRight.png" type="Texture" id=17]
[ext_resource path="res://Button/MouseRight_Pressed.png" type="Texture" id=18]

[sub_resource type="CylinderShape" id=1]
height = 3.8
radius = 0.65

[sub_resource type="SphereMesh" id=4]
radius = 0.1
height = 0.2

[sub_resource type="SphereMesh" id=5]
radius = 64.0
height = 128.0

[node name="KinematicBody" type="KinematicBody"]
script = ExtResource( 1 )

[node name="Head" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0 )

[node name="Camera" type="Camera" parent="Head"]

[node name="RayCast" type="RayCast" parent="Head"]
enabled = true
cast_to = Vector3( 0, 0, -12 )
collision_mask = 3

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )
shape = SubResource( 1 )

[node name="GroundCheck" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
enabled = true
cast_to = Vector3( 0, -1.3, 0 )

[node name="CastPointer" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )
mesh = SubResource( 4 )

[node name="DebugUI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel" type="Panel" parent="DebugUI"]
self_modulate = Color( 1, 1, 1, 0.607843 )
margin_left = 16.0
margin_top = 16.0
margin_right = 400.0
margin_bottom = 272.0

[node name="Label" type="Label" parent="DebugUI/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0
custom_fonts/font = ExtResource( 2 )

[node name="Label" type="Label" parent="DebugUI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -640.0
margin_top = -8.5
margin_right = 640.0
margin_bottom = 8.5
custom_fonts/font = ExtResource( 2 )
text = "+"
align = 1

[node name="Control" type="Control" parent="DebugUI"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -256.0
margin_top = -288.0
margin_right = -60.0
margin_bottom = -92.0
rect_scale = Vector2( 1.5, 1.5 )
rect_pivot_offset = Vector2( 196, 196 )

[node name="Inventory" type="TouchScreenButton" parent="DebugUI/Control"]
position = Vector2( 38.6666, 129.333 )
normal = ExtResource( 13 )
pressed = ExtResource( 14 )
action = "inventory"
visibility_mode = 1

[node name="Jump" type="TouchScreenButton" parent="DebugUI/Control"]
position = Vector2( 108, 129.333 )
normal = ExtResource( 10 )
pressed = ExtResource( 12 )
action = "jump"
visibility_mode = 1

[node name="MouseLeft" type="TouchScreenButton" parent="DebugUI/Control"]
position = Vector2( 38.6666, 60 )
normal = ExtResource( 16 )
pressed = ExtResource( 15 )
action = "mouse_left"
visibility_mode = 1

[node name="MouseRight" type="TouchScreenButton" parent="DebugUI/Control"]
position = Vector2( 108, 60 )
normal = ExtResource( 17 )
pressed = ExtResource( 18 )
action = "mouse_right"
visibility_mode = 1

[node name="Inventory" type="Panel" parent="DebugUI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.0
margin_top = -192.0
margin_right = 256.0
margin_bottom = 192.0
script = ExtResource( 4 )

[node name="ScrollContainer" type="ScrollContainer" parent="DebugUI/Inventory"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0

[node name="GridContainer" type="GridContainer" parent="DebugUI/Inventory/ScrollContainer"]
custom_constants/vseparation = 13
custom_constants/hseparation = 13
columns = 4

[node name="Close" type="Button" parent="DebugUI/Inventory"]
margin_left = -16.0
margin_top = -16.0
margin_right = 16.0
margin_bottom = 16.0
rect_min_size = Vector2( 32, 32 )
custom_fonts/font = ExtResource( 3 )
text = "X"

[node name="UpdateSensitivity" type="Control" parent="DebugUI/Inventory"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = 8.0
margin_right = 168.0
margin_bottom = 72.0

[node name="LineEdit" type="SpinBox" parent="DebugUI/Inventory/UpdateSensitivity"]
margin_right = 160.0
margin_bottom = 35.0
rect_min_size = Vector2( 160, 32 )
min_value = 15.0
value = 15.0
align = 1

[node name="Button" type="Button" parent="DebugUI/Inventory/UpdateSensitivity"]
margin_top = 40.0
margin_right = 160.0
margin_bottom = 71.0
rect_min_size = Vector2( 160, 0 )
custom_fonts/font = ExtResource( 2 )
text = "UPDATE SENSITIVITY"

[node name="EnableVAO" type="Button" parent="DebugUI/Inventory"]
margin_left = 520.0
margin_top = 80.0
margin_right = 622.0
margin_bottom = 100.0
rect_min_size = Vector2( 160, 32 )
focus_mode = 0
custom_fonts/font = ExtResource( 2 )
enabled_focus_mode = 0
text = "ENABLE AMBIENT OCCLUSION"
align = 0

[node name="EnableRAO" type="Button" parent="DebugUI/Inventory"]
visible = false
margin_left = 520.0
margin_top = 120.0
margin_right = 680.0
margin_bottom = 152.0
rect_min_size = Vector2( 160, 32 )
focus_mode = 0
custom_fonts/font = ExtResource( 2 )
enabled_focus_mode = 0
text = "ENABLE REALTIME AO"
align = 0

[node name="EnableRShadow" type="Button" parent="DebugUI/Inventory"]
margin_left = 520.0
margin_top = 120.0
margin_right = 680.0
margin_bottom = 152.0
rect_min_size = Vector2( 160, 32 )
focus_mode = 0
custom_fonts/font = ExtResource( 2 )
enabled_focus_mode = 0
text = "ENABLE SUNLIGHT SHADOW"
align = 0

[node name="EnableSeamlessChunk" type="Button" parent="DebugUI/Inventory"]
margin_left = 520.0
margin_top = 160.0
margin_right = 680.0
margin_bottom = 192.0
rect_min_size = Vector2( 160, 32 )
focus_mode = 0
custom_fonts/font = ExtResource( 2 )
enabled_focus_mode = 0
text = "ENABLE SEAMLESS CHUNK"
align = 0

[node name="DPad" type="Control" parent="DebugUI"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 64.0
margin_top = -256.0
margin_right = 260.0
margin_bottom = -60.0
rect_scale = Vector2( 1.5, 1.5 )
rect_pivot_offset = Vector2( 0, 196 )

[node name="Forward" type="TouchScreenButton" parent="DebugUI/DPad"]
position = Vector2( 64, 4 )
normal = ExtResource( 6 )
pressed = ExtResource( 5 )
action = "move_forward"
visibility_mode = 1

[node name="Left" type="TouchScreenButton" parent="DebugUI/DPad"]
position = Vector2( 0, 68 )
normal = ExtResource( 8 )
pressed = ExtResource( 11 )
action = "move_left"
visibility_mode = 1

[node name="Right" type="TouchScreenButton" parent="DebugUI/DPad"]
position = Vector2( 128, 68 )
normal = ExtResource( 9 )
pressed = ExtResource( 7 )
action = "move_right"
visibility_mode = 1

[node name="Backward" type="TouchScreenButton" parent="DebugUI/DPad"]
position = Vector2( 64, 132 )
normal = ExtResource( 10 )
pressed = ExtResource( 12 )
action = "move_backward"
visibility_mode = 1

[node name="Compass" type="Control" parent="DebugUI"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -144.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = 144.0
rect_pivot_offset = Vector2( 64, 64 )

[node name="MeshInstance2D" type="MeshInstance2D" parent="DebugUI/Compass"]
position = Vector2( 64, 64 )
mesh = SubResource( 5 )

[node name="Label" type="Label" parent="DebugUI/Compass/MeshInstance2D"]
self_modulate = Color( 0, 0.109804, 1, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -16.0
margin_top = -64.0
margin_right = 16.0
margin_bottom = -32.0
rect_pivot_offset = Vector2( 16, 16 )
custom_fonts/font = ExtResource( 3 )
text = "-Z"
align = 1
valign = 1

[node name="Label2" type="Label" parent="DebugUI/Compass/MeshInstance2D"]
self_modulate = Color( 0, 0.109804, 1, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -16.0
margin_top = 32.0
margin_right = 16.0
margin_bottom = 64.0
rect_rotation = 180.0
rect_pivot_offset = Vector2( 16, 16 )
custom_fonts/font = ExtResource( 3 )
text = "+Z"
align = 1
valign = 1

[node name="Label3" type="Label" parent="DebugUI/Compass/MeshInstance2D"]
self_modulate = Color( 1, 0, 0, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -16.0
margin_right = -32.0
margin_bottom = 16.0
rect_rotation = 90.0
rect_pivot_offset = Vector2( 16, 16 )
custom_fonts/font = ExtResource( 3 )
text = "-X"
align = 1
valign = 1

[node name="Label4" type="Label" parent="DebugUI/Compass/MeshInstance2D"]
self_modulate = Color( 1, 0, 0, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 32.0
margin_top = -16.0
margin_right = 64.0
margin_bottom = 16.0
rect_rotation = -90.0
rect_pivot_offset = Vector2( 16, 16 )
custom_fonts/font = ExtResource( 3 )
text = "+X"
align = 1
valign = 1

[node name="Label5" type="Label" parent="DebugUI/Compass/MeshInstance2D"]
self_modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 18.6274
margin_top = 15.6274
margin_right = 50.6274
margin_bottom = 47.6274
rect_rotation = 135.0
rect_pivot_offset = Vector2( 16, 16 )
custom_fonts/font = ExtResource( 3 )
text = "1"
align = 1
valign = 1

[node name="Label6" type="Label" parent="DebugUI/Compass/MeshInstance2D"]
self_modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -45.3726
margin_top = 15.6274
margin_right = -13.3726
margin_bottom = 47.6274
rect_rotation = 231.0
rect_pivot_offset = Vector2( 16, 16 )
custom_fonts/font = ExtResource( 3 )
text = "2"
align = 1
valign = 1

[node name="Label7" type="Label" parent="DebugUI/Compass/MeshInstance2D"]
self_modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -53.3726
margin_top = -48.3726
margin_right = -21.3726
margin_bottom = -16.3726
rect_rotation = -45.0
rect_pivot_offset = Vector2( 16, 16 )
custom_fonts/font = ExtResource( 3 )
text = "3"
align = 1
valign = 1

[node name="Label8" type="Label" parent="DebugUI/Compass/MeshInstance2D"]
self_modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 18.6274
margin_top = -48.3726
margin_right = 50.6274
margin_bottom = -16.3726
rect_rotation = 45.0
rect_pivot_offset = Vector2( 16, 16 )
custom_fonts/font = ExtResource( 3 )
text = "4"
align = 1
valign = 1

[node name="Loading" type="ColorRect" parent="DebugUI"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="DebugUI/Loading"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -26.5
margin_bottom = 26.5
custom_fonts/font = ExtResource( 3 )
text = "RE-UPDATING CHUNK
0 / 125"
align = 1

[node name="LoadingTween" type="Tween" parent="DebugUI"]

[node name="PleaseWait" type="Label" parent="DebugUI"]
modulate = Color( 0, 0, 0, 1 )
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -12.5
margin_bottom = 12.5
custom_fonts/font = ExtResource( 3 )
text = "PLEASE WAIT THE CHUNK IS BEING LOADED"
align = 1

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="CanvasLayer"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -26.5
margin_bottom = 26.5
custom_fonts/font = ExtResource( 3 )
text = "LOADING INITIAL CHUNK
0 / 125"
align = 1
